backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment
Rule 5     statement -> if_statement
Rule 6     statement -> for_loop
Rule 7     statement -> while_loop
Rule 8     statement -> function_declaration
Rule 9     statement -> expression_statement
Rule 10    statement -> BREAK SEMI
Rule 11    statement -> BREAK
Rule 12    block -> statement_list
Rule 13    expression_statement -> expression opt_semi
Rule 14    opt_semi -> SEMI
Rule 15    opt_semi -> empty
Rule 16    empty -> <empty>
Rule 17    assignment -> ID ASSIGN expression SEMI
Rule 18    assignment -> ID ASSIGN expression
Rule 19    statement -> SEMI
Rule 20    if_statement -> IF expression block END
Rule 21    if_statement -> IF expression block ELSE block END
Rule 22    if_statement -> IF expression block elseif_list END
Rule 23    if_statement -> IF expression block elseif_list ELSE block END
Rule 24    elseif_list -> elseif_list elseif_clause
Rule 25    elseif_list -> elseif_clause
Rule 26    elseif_clause -> ELSEIF expression block
Rule 27    for_loop -> FOR ID ASSIGN expression block END
Rule 28    while_loop -> WHILE expression block END
Rule 29    function_declaration -> FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
Rule 30    function_declaration -> FUNCTION ID LPAREN arg_list RPAREN block END
Rule 31    return_vars -> ID
Rule 32    return_vars -> LBRACKET id_list RBRACKET
Rule 33    id_list -> ID
Rule 34    id_list -> id_list COMMA ID
Rule 35    arg_list -> <empty>
Rule 36    arg_list -> arguments
Rule 37    arguments -> expression
Rule 38    arguments -> arguments COMMA expression
Rule 39    expression -> colon_expr
Rule 40    colon_expr -> colon_expr COLON colon_expr
Rule 41    colon_expr -> short_or
Rule 42    short_or -> short_or OROR short_and
Rule 43    short_or -> short_and
Rule 44    short_and -> short_and ANDAND logical_or
Rule 45    short_and -> logical_or
Rule 46    logical_or -> logical_or OR logical_and
Rule 47    logical_or -> logical_and
Rule 48    logical_and -> logical_and AND relation
Rule 49    logical_and -> relation
Rule 50    relation -> relation EQ relation
Rule 51    relation -> relation NEQ relation
Rule 52    relation -> relation LT relation
Rule 53    relation -> relation LE relation
Rule 54    relation -> relation GT relation
Rule 55    relation -> relation GE relation
Rule 56    relation -> additive
Rule 57    additive -> additive PLUS additive
Rule 58    additive -> additive MINUS additive
Rule 59    additive -> multiplicative
Rule 60    multiplicative -> multiplicative MUL multiplicative
Rule 61    multiplicative -> multiplicative DOTMUL multiplicative
Rule 62    multiplicative -> multiplicative DIV multiplicative
Rule 63    multiplicative -> multiplicative DOTDIV multiplicative
Rule 64    multiplicative -> power
Rule 65    power -> power POW power
Rule 66    power -> power DOTPOW power
Rule 67    power -> unary
Rule 68    unary -> MINUS unary
Rule 69    unary -> NOT unary
Rule 70    unary -> postfix
Rule 71    postfix -> postfix TRANSPOSE
Rule 72    postfix -> primary
Rule 73    primary -> ID
Rule 74    primary -> NUMBER
Rule 75    primary -> STRING
Rule 76    primary -> LPAREN expression RPAREN
Rule 77    primary -> matrix
Rule 78    primary -> ID LPAREN arg_list RPAREN
Rule 79    matrix -> LBRACKET RBRACKET
Rule 80    matrix -> LBRACKET row_list RBRACKET
Rule 81    row_list -> row
Rule 82    row_list -> row_list SEMI row
Rule 83    row -> expression_list
Rule 84    expression_list -> expression
Rule 85    expression_list -> expression_list COMMA expression

Terminals, with rules where they appear

AND                  : 48
ANDAND               : 44
ASSIGN               : 17 18 27 29
BREAK                : 10 11
COLON                : 40
COMMA                : 34 38 85
DIV                  : 62
DOTDIV               : 63
DOTMUL               : 61
DOTPOW               : 66
ELSE                 : 21 23
ELSEIF               : 26
END                  : 20 21 22 23 27 28 29 30
EQ                   : 50
FOR                  : 27
FUNCTION             : 29 30
GE                   : 55
GT                   : 54
ID                   : 17 18 27 29 30 31 33 34 73 78
IF                   : 20 21 22 23
LBRACKET             : 32 79 80
LE                   : 53
LPAREN               : 29 30 76 78
LT                   : 52
MINUS                : 58 68
MUL                  : 60
NEQ                  : 51
NOT                  : 69
NUMBER               : 74
OR                   : 46
OROR                 : 42
PLUS                 : 57
POW                  : 65
RBRACKET             : 32 79 80
RPAREN               : 29 30 76 78
SEMI                 : 10 14 17 19 82
STRING               : 75
TRANSPOSE            : 71
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

additive             : 56 57 57 58 58
arg_list             : 29 30 78
arguments            : 36 38
assignment           : 4
block                : 20 21 21 22 23 23 26 27 28 29 30
colon_expr           : 39 40 40
elseif_clause        : 24 25
elseif_list          : 22 23 24
empty                : 15
expression           : 13 17 18 20 21 22 23 26 27 28 37 38 76 84 85
expression_list      : 83 85
expression_statement : 9
for_loop             : 6
function_declaration : 8
id_list              : 32 34
if_statement         : 5
logical_and          : 46 47 48
logical_or           : 44 45 46
matrix               : 77
multiplicative       : 59 60 60 61 61 62 62 63 63
opt_semi             : 13
postfix              : 70 71
power                : 64 65 65 66 66
primary              : 72
program              : 0
relation             : 48 49 50 50 51 51 52 52 53 53 54 54 55 55
return_vars          : 29
row                  : 81 82
row_list             : 80 82
short_and            : 42 43 44
short_or             : 41 42
statement            : 2 3
statement_list       : 1 3 12
unary                : 67 68 69
while_loop           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . function_declaration
    (9) statement -> . expression_statement
    (10) statement -> . BREAK SEMI
    (11) statement -> . BREAK
    (19) statement -> . SEMI
    (17) assignment -> . ID ASSIGN expression SEMI
    (18) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF expression block END
    (21) if_statement -> . IF expression block ELSE block END
    (22) if_statement -> . IF expression block elseif_list END
    (23) if_statement -> . IF expression block elseif_list ELSE block END
    (27) for_loop -> . FOR ID ASSIGN expression block END
    (28) while_loop -> . WHILE expression block END
    (29) function_declaration -> . FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
    (30) function_declaration -> . FUNCTION ID LPAREN arg_list RPAREN block END
    (13) expression_statement -> . expression opt_semi
    (39) expression -> . colon_expr
    (40) colon_expr -> . colon_expr COLON colon_expr
    (41) colon_expr -> . short_or
    (42) short_or -> . short_or OROR short_and
    (43) short_or -> . short_and
    (44) short_and -> . short_and ANDAND logical_or
    (45) short_and -> . logical_or
    (46) logical_or -> . logical_or OR logical_and
    (47) logical_or -> . logical_and
    (48) logical_and -> . logical_and AND relation
    (49) logical_and -> . relation
    (50) relation -> . relation EQ relation
    (51) relation -> . relation NEQ relation
    (52) relation -> . relation LT relation
    (53) relation -> . relation LE relation
    (54) relation -> . relation GT relation
    (55) relation -> . relation GE relation
    (56) relation -> . additive
    (57) additive -> . additive PLUS additive
    (58) additive -> . additive MINUS additive
    (59) additive -> . multiplicative
    (60) multiplicative -> . multiplicative MUL multiplicative
    (61) multiplicative -> . multiplicative DOTMUL multiplicative
    (62) multiplicative -> . multiplicative DIV multiplicative
    (63) multiplicative -> . multiplicative DOTDIV multiplicative
    (64) multiplicative -> . power
    (65) power -> . power POW power
    (66) power -> . power DOTPOW power
    (67) power -> . unary
    (68) unary -> . MINUS unary
    (69) unary -> . NOT unary
    (70) unary -> . postfix
    (71) postfix -> . postfix TRANSPOSE
    (72) postfix -> . primary
    (73) primary -> . ID
    (74) primary -> . NUMBER
    (75) primary -> . STRING
    (76) primary -> . LPAREN expression RPAREN
    (77) primary -> . matrix
    (78) primary -> . ID LPAREN arg_list RPAREN
    (79) matrix -> . LBRACKET RBRACKET
    (80) matrix -> . LBRACKET row_list RBRACKET

    BREAK           shift and go to state 10
    SEMI            shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    FUNCTION        shift and go to state 17
    MINUS           shift and go to state 26
    NOT             shift and go to state 30
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    LPAREN          shift and go to state 18
    LBRACKET        shift and go to state 36

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    function_declaration           shift and go to state 8
    expression_statement           shift and go to state 9
    expression                     shift and go to state 13
    colon_expr                     shift and go to state 19
    short_or                       shift and go to state 20
    short_and                      shift and go to state 21
    logical_or                     shift and go to state 22
    logical_and                    shift and go to state 23
    relation                       shift and go to state 24
    additive                       shift and go to state 25
    multiplicative                 shift and go to state 27
    power                          shift and go to state 28
    unary                          shift and go to state 29
    postfix                        shift and go to state 31
    primary                        shift and go to state 32
    matrix                         shift and go to state 35

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . function_declaration
    (9) statement -> . expression_statement
    (10) statement -> . BREAK SEMI
    (11) statement -> . BREAK
    (19) statement -> . SEMI
    (17) assignment -> . ID ASSIGN expression SEMI
    (18) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF expression block END
    (21) if_statement -> . IF expression block ELSE block END
    (22) if_statement -> . IF expression block elseif_list END
    (23) if_statement -> . IF expression block elseif_list ELSE block END
    (27) for_loop -> . FOR ID ASSIGN expression block END
    (28) while_loop -> . WHILE expression block END
    (29) function_declaration -> . FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
    (30) function_declaration -> . FUNCTION ID LPAREN arg_list RPAREN block END
    (13) expression_statement -> . expression opt_semi
    (39) expression -> . colon_expr
    (40) colon_expr -> . colon_expr COLON colon_expr
    (41) colon_expr -> . short_or
    (42) short_or -> . short_or OROR short_and
    (43) short_or -> . short_and
    (44) short_and -> . short_and ANDAND logical_or
    (45) short_and -> . logical_or
    (46) logical_or -> . logical_or OR logical_and
    (47) logical_or -> . logical_and
    (48) logical_and -> . logical_and AND relation
    (49) logical_and -> . relation
    (50) relation -> . relation EQ relation
    (51) relation -> . relation NEQ relation
    (52) relation -> . relation LT relation
    (53) relation -> . relation LE relation
    (54) relation -> . relation GT relation
    (55) relation -> . relation GE relation
    (56) relation -> . additive
    (57) additive -> . additive PLUS additive
    (58) additive -> . additive MINUS additive
    (59) additive -> . multiplicative
    (60) multiplicative -> . multiplicative MUL multiplicative
    (61) multiplicative -> . multiplicative DOTMUL multiplicative
    (62) multiplicative -> . multiplicative DIV multiplicative
    (63) multiplicative -> . multiplicative DOTDIV multiplicative
    (64) multiplicative -> . power
    (65) power -> . power POW power
    (66) power -> . power DOTPOW power
    (67) power -> . unary
    (68) unary -> . MINUS unary
    (69) unary -> . NOT unary
    (70) unary -> . postfix
    (71) postfix -> . postfix TRANSPOSE
    (72) postfix -> . primary
    (73) primary -> . ID
    (74) primary -> . NUMBER
    (75) primary -> . STRING
    (76) primary -> . LPAREN expression RPAREN
    (77) primary -> . matrix
    (78) primary -> . ID LPAREN arg_list RPAREN
    (79) matrix -> . LBRACKET RBRACKET
    (80) matrix -> . LBRACKET row_list RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    BREAK           shift and go to state 10
    SEMI            shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    FUNCTION        shift and go to state 17
    MINUS           shift and go to state 26
    NOT             shift and go to state 30
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    LPAREN          shift and go to state 18
    LBRACKET        shift and go to state 36

    statement                      shift and go to state 37
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    function_declaration           shift and go to state 8
    expression_statement           shift and go to state 9
    expression                     shift and go to state 13
    colon_expr                     shift and go to state 19
    short_or                       shift and go to state 20
    short_and                      shift and go to state 21
    logical_or                     shift and go to state 22
    logical_and                    shift and go to state 23
    relation                       shift and go to state 24
    additive                       shift and go to state 25
    multiplicative                 shift and go to state 27
    power                          shift and go to state 28
    unary                          shift and go to state 29
    postfix                        shift and go to state 31
    primary                        shift and go to state 32
    matrix                         shift and go to state 35

state 3

    (2) statement_list -> statement .

    BREAK           reduce using rule 2 (statement_list -> statement .)
    SEMI            reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    NUMBER          reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    LBRACKET        reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    ELSE            reduce using rule 2 (statement_list -> statement .)
    ELSEIF          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    BREAK           reduce using rule 4 (statement -> assignment .)
    SEMI            reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FUNCTION        reduce using rule 4 (statement -> assignment .)
    MINUS           reduce using rule 4 (statement -> assignment .)
    NOT             reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    STRING          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    LBRACKET        reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    END             reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELSEIF          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> if_statement .

    BREAK           reduce using rule 5 (statement -> if_statement .)
    SEMI            reduce using rule 5 (statement -> if_statement .)
    ID              reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    MINUS           reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    NUMBER          reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    LPAREN          reduce using rule 5 (statement -> if_statement .)
    LBRACKET        reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    END             reduce using rule 5 (statement -> if_statement .)
    ELSE            reduce using rule 5 (statement -> if_statement .)
    ELSEIF          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> for_loop .

    BREAK           reduce using rule 6 (statement -> for_loop .)
    SEMI            reduce using rule 6 (statement -> for_loop .)
    ID              reduce using rule 6 (statement -> for_loop .)
    IF              reduce using rule 6 (statement -> for_loop .)
    FOR             reduce using rule 6 (statement -> for_loop .)
    WHILE           reduce using rule 6 (statement -> for_loop .)
    FUNCTION        reduce using rule 6 (statement -> for_loop .)
    MINUS           reduce using rule 6 (statement -> for_loop .)
    NOT             reduce using rule 6 (statement -> for_loop .)
    NUMBER          reduce using rule 6 (statement -> for_loop .)
    STRING          reduce using rule 6 (statement -> for_loop .)
    LPAREN          reduce using rule 6 (statement -> for_loop .)
    LBRACKET        reduce using rule 6 (statement -> for_loop .)
    $end            reduce using rule 6 (statement -> for_loop .)
    END             reduce using rule 6 (statement -> for_loop .)
    ELSE            reduce using rule 6 (statement -> for_loop .)
    ELSEIF          reduce using rule 6 (statement -> for_loop .)


state 7

    (7) statement -> while_loop .

    BREAK           reduce using rule 7 (statement -> while_loop .)
    SEMI            reduce using rule 7 (statement -> while_loop .)
    ID              reduce using rule 7 (statement -> while_loop .)
    IF              reduce using rule 7 (statement -> while_loop .)
    FOR             reduce using rule 7 (statement -> while_loop .)
    WHILE           reduce using rule 7 (statement -> while_loop .)
    FUNCTION        reduce using rule 7 (statement -> while_loop .)
    MINUS           reduce using rule 7 (statement -> while_loop .)
    NOT             reduce using rule 7 (statement -> while_loop .)
    NUMBER          reduce using rule 7 (statement -> while_loop .)
    STRING          reduce using rule 7 (statement -> while_loop .)
    LPAREN          reduce using rule 7 (statement -> while_loop .)
    LBRACKET        reduce using rule 7 (statement -> while_loop .)
    $end            reduce using rule 7 (statement -> while_loop .)
    END             reduce using rule 7 (statement -> while_loop .)
    ELSE            reduce using rule 7 (statement -> while_loop .)
    ELSEIF          reduce using rule 7 (statement -> while_loop .)


state 8

    (8) statement -> function_declaration .

    BREAK           reduce using rule 8 (statement -> function_declaration .)
    SEMI            reduce using rule 8 (statement -> function_declaration .)
    ID              reduce using rule 8 (statement -> function_declaration .)
    IF              reduce using rule 8 (statement -> function_declaration .)
    FOR             reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    FUNCTION        reduce using rule 8 (statement -> function_declaration .)
    MINUS           reduce using rule 8 (statement -> function_declaration .)
    NOT             reduce using rule 8 (statement -> function_declaration .)
    NUMBER          reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    LPAREN          reduce using rule 8 (statement -> function_declaration .)
    LBRACKET        reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    END             reduce using rule 8 (statement -> function_declaration .)
    ELSE            reduce using rule 8 (statement -> function_declaration .)
    ELSEIF          reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> expression_statement .

    BREAK           reduce using rule 9 (statement -> expression_statement .)
    SEMI            reduce using rule 9 (statement -> expression_statement .)
    ID              reduce using rule 9 (statement -> expression_statement .)
    IF              reduce using rule 9 (statement -> expression_statement .)
    FOR             reduce using rule 9 (statement -> expression_statement .)
    WHILE           reduce using rule 9 (statement -> expression_statement .)
    FUNCTION        reduce using rule 9 (statement -> expression_statement .)
    MINUS           reduce using rule 9 (statement -> expression_statement .)
    NOT             reduce using rule 9 (statement -> expression_statement .)
    NUMBER          reduce using rule 9 (statement -> expression_statement .)
    STRING          reduce using rule 9 (statement -> expression_statement .)
    LPAREN          reduce using rule 9 (statement -> expression_statement .)
    LBRACKET        reduce using rule 9 (statement -> expression_statement .)
    $end            reduce using rule 9 (statement -> expression_statement .)
    END             reduce using rule 9 (statement -> expression_statement .)
    ELSE            reduce using rule 9 (statement -> expression_statement .)
    ELSEIF          reduce using rule 9 (statement -> expression_statement .)


state 10

    (10) statement -> BREAK . SEMI
    (11) statement -> BREAK .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 38
    BREAK           reduce using rule 11 (statement -> BREAK .)
    ID              reduce using rule 11 (statement -> BREAK .)
    IF              reduce using rule 11 (statement -> BREAK .)
    FOR             reduce using rule 11 (statement -> BREAK .)
    WHILE           reduce using rule 11 (statement -> BREAK .)
    FUNCTION        reduce using rule 11 (statement -> BREAK .)
    MINUS           reduce using rule 11 (statement -> BREAK .)
    NOT             reduce using rule 11 (statement -> BREAK .)
    NUMBER          reduce using rule 11 (statement -> BREAK .)
    STRING          reduce using rule 11 (statement -> BREAK .)
    LPAREN          reduce using rule 11 (statement -> BREAK .)
    LBRACKET        reduce using rule 11 (statement -> BREAK .)
    $end            reduce using rule 11 (statement -> BREAK .)
    END             reduce using rule 11 (statement -> BREAK .)
    ELSE            reduce using rule 11 (statement -> BREAK .)
    ELSEIF          reduce using rule 11 (statement -> BREAK .)

  ! SEMI            [ reduce using rule 11 (statement -> BREAK .) ]


state 11

    (19) statement -> SEMI .

    BREAK           reduce using rule 19 (statement -> SEMI .)
    SEMI            reduce using rule 19 (statement -> SEMI .)
    ID              reduce using rule 19 (statement -> SEMI .)
    IF              reduce using rule 19 (statement -> SEMI .)
    FOR             reduce using rule 19 (statement -> SEMI .)
    WHILE           reduce using rule 19 (statement -> SEMI .)
    FUNCTION        reduce using rule 19 (statement -> SEMI .)
    MINUS           reduce using rule 19 (statement -> SEMI .)
    NOT             reduce using rule 19 (statement -> SEMI .)
    NUMBER          reduce using rule 19 (statement -> SEMI .)
    STRING          reduce using rule 19 (statement -> SEMI .)
    LPAREN          reduce using rule 19 (statement -> SEMI .)
    LBRACKET        reduce using rule 19 (statement -> SEMI .)
    $end            reduce using rule 19 (statement -> SEMI .)
    END             reduce using rule 19 (statement -> SEMI .)
    ELSE            reduce using rule 19 (statement -> SEMI .)
    ELSEIF          reduce using rule 19 (statement -> SEMI .)


state 12

    (17) assignment -> ID . ASSIGN expression SEMI
    (18) assignment -> ID . ASSIGN expression
    (73) primary -> ID .
    (78) primary -> ID . LPAREN arg_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    ASSIGN          shift and go to state 39
    TRANSPOSE       reduce using rule 73 (primary -> ID .)
    POW             reduce using rule 73 (primary -> ID .)
    DOTPOW          reduce using rule 73 (primary -> ID .)
    MUL             reduce using rule 73 (primary -> ID .)
    DOTMUL          reduce using rule 73 (primary -> ID .)
    DIV             reduce using rule 73 (primary -> ID .)
    DOTDIV          reduce using rule 73 (primary -> ID .)
    PLUS            reduce using rule 73 (primary -> ID .)
    MINUS           reduce using rule 73 (primary -> ID .)
    EQ              reduce using rule 73 (primary -> ID .)
    NEQ             reduce using rule 73 (primary -> ID .)
    LT              reduce using rule 73 (primary -> ID .)
    LE              reduce using rule 73 (primary -> ID .)
    GT              reduce using rule 73 (primary -> ID .)
    GE              reduce using rule 73 (primary -> ID .)
    AND             reduce using rule 73 (primary -> ID .)
    OR              reduce using rule 73 (primary -> ID .)
    ANDAND          reduce using rule 73 (primary -> ID .)
    OROR            reduce using rule 73 (primary -> ID .)
    COLON           reduce using rule 73 (primary -> ID .)
    SEMI            reduce using rule 73 (primary -> ID .)
    BREAK           reduce using rule 73 (primary -> ID .)
    ID              reduce using rule 73 (primary -> ID .)
    IF              reduce using rule 73 (primary -> ID .)
    FOR             reduce using rule 73 (primary -> ID .)
    WHILE           reduce using rule 73 (primary -> ID .)
    FUNCTION        reduce using rule 73 (primary -> ID .)
    NOT             reduce using rule 73 (primary -> ID .)
    NUMBER          reduce using rule 73 (primary -> ID .)
    STRING          reduce using rule 73 (primary -> ID .)
    LBRACKET        reduce using rule 73 (primary -> ID .)
    $end            reduce using rule 73 (primary -> ID .)
    END             reduce using rule 73 (primary -> ID .)
    ELSE            reduce using rule 73 (primary -> ID .)
    ELSEIF          reduce using rule 73 (primary -> ID .)
    LPAREN          shift and go to state 40

  ! LPAREN          [ reduce using rule 73 (primary -> ID .) ]


state 13

    (13) expression_statement -> expression . opt_semi
    (14) opt_semi -> . SEMI
    (15) opt_semi -> . empty
    (16) empty -> .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 42
    BREAK           reduce using rule 16 (empty -> .)
    ID              reduce using rule 16 (empty -> .)
    IF              reduce using rule 16 (empty -> .)
    FOR             reduce using rule 16 (empty -> .)
    WHILE           reduce using rule 16 (empty -> .)
    FUNCTION        reduce using rule 16 (empty -> .)
    MINUS           reduce using rule 16 (empty -> .)
    NOT             reduce using rule 16 (empty -> .)
    NUMBER          reduce using rule 16 (empty -> .)
    STRING          reduce using rule 16 (empty -> .)
    LPAREN          reduce using rule 16 (empty -> .)
    LBRACKET        reduce using rule 16 (empty -> .)
    $end            reduce using rule 16 (empty -> .)
    END             reduce using rule 16 (empty -> .)
    ELSE            reduce using rule 16 (empty -> .)
    ELSEIF          reduce using rule 16 (empty -> .)

  ! SEMI            [ reduce using rule 16 (empty -> .) ]

    opt_semi                       shift and go to state 41
    empty                          shift and go to state 43

state 14

    (20) if_statement -> IF . expression block END
    (21) if_statement -> IF . expression block ELSE block END
    (22) if_statement -> IF . expression block elseif_list END
    (23) if_statement -> IF . expression block elseif_list ELSE block END
    (39) expression -> . colon_expr
    (40) colon_expr -> . colon_expr COLON colon_expr
    (41) colon_expr -> . short_or
    (42) short_or -> . short_or OROR short_and
    (43) short_or -> . short_and
    (44) short_and -> . short_and ANDAND logical_or
    (45) short_and -> . logical_or
    (46) logical_or -> . logical_or OR logical_and
    (47) logical_or -> . logical_and
    (48) logical_and -> . logical_and AND relation
    (49) logical_and -> . relation
    (50) relation -> . relation EQ relation
    (51) relation -> . relation NEQ relation
    (52) relation -> . relation LT relation
    (53) relation -> . relation LE relation
    (54) relation -> . relation GT relation
    (55) relation -> . relation GE relation
    (56) relation -> . additive
    (57) additive -> . additive PLUS additive
    (58) additive -> . additive MINUS additive
    (59) additive -> . multiplicative
    (60) multiplicative -> . multiplicative MUL multiplicative
    (61) multiplicative -> . multiplicative DOTMUL multiplicative
    (62) multiplicative -> . multiplicative DIV multiplicative
    (63) multiplicative -> . multiplicative DOTDIV multiplicative
    (64) multiplicative -> . power
    (65) power -> . power POW power
    (66) power -> . power DOTPOW power
    (67) power -> . unary
    (68) unary -> . MINUS unary
    (69) unary -> . NOT unary
    (70) unary -> . postfix
    (71) postfix -> . postfix TRANSPOSE
    (72) postfix -> . primary
    (73) primary -> . ID
    (74) primary -> . NUMBER
    (75) primary -> . STRING
    (76) primary -> . LPAREN expression RPAREN
    (77) primary -> . matrix
    (78) primary -> . ID LPAREN arg_list RPAREN
    (79) matrix -> . LBRACKET RBRACKET
    (80) matrix -> . LBRACKET row_list RBRACKET

    MINUS           shift and go to state 26
    NOT             shift and go to state 30
    ID              shift and go to state 45
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    LPAREN          shift and go to state 18
    LBRACKET        shift and go to state 36

    expression                     shift and go to state 44
    colon_expr                     shift and go to state 19
    short_or                       shift and go to state 20
    short_and                      shift and go to state 21
    logical_or                     shift and go to state 22
    logical_and                    shift and go to state 23
    relation                       shift and go to state 24
    additive                       shift and go to state 25
    multiplicative                 shift and go to state 27
    power                          shift and go to state 28
    unary                          shift and go to state 29
    postfix                        shift and go to state 31
    primary                        shift and go to state 32
    matrix                         shift and go to state 35

state 15

    (27) for_loop -> FOR . ID ASSIGN expression block END

    ID              shift and go to state 46


state 16

    (28) while_loop -> WHILE . expression block END
    (39) expression -> . colon_expr
    (40) colon_expr -> . colon_expr COLON colon_expr
    (41) colon_expr -> . short_or
    (42) short_or -> . short_or OROR short_and
    (43) short_or -> . short_and
    (44) short_and -> . short_and ANDAND logical_or
    (45) short_and -> . logical_or
    (46) logical_or -> . logical_or OR logical_and
    (47) logical_or -> . logical_and
    (48) logical_and -> . logical_and AND relation
    (49) logical_and -> . relation
    (50) relation -> . relation EQ relation
    (51) relation -> . relation NEQ relation
    (52) relation -> . relation LT relation
    (53) relation -> . relation LE relation
    (54) relation -> . relation GT relation
    (55) relation -> . relation GE relation
    (56) relation -> . additive
    (57) additive -> . additive PLUS additive
    (58) additive -> . additive MINUS additive
    (59) additive -> . multiplicative
    (60) multiplicative -> . multiplicative MUL multiplicative
    (61) multiplicative -> . multiplicative DOTMUL multiplicative
    (62) multiplicative -> . multiplicative DIV multiplicative
    (63) multiplicative -> . multiplicative DOTDIV multiplicative
    (64) multiplicative -> . power
    (65) power -> . power POW power
    (66) power -> . power DOTPOW power
    (67) power -> . unary
    (68) unary -> . MINUS unary
    (69) unary -> . NOT unary
    (70) unary -> . postfix
    (71) postfix -> . postfix TRANSPOSE
    (72) postfix -> . primary
    (73) primary -> . ID
    (74) primary -> . NUMBER
    (75) primary -> . STRING
    (76) primary -> . LPAREN expression RPAREN
    (77) primary -> . matrix
    (78) primary -> . ID LPAREN arg_list RPAREN
    (79) matrix -> . LBRACKET RBRACKET
    (80) matrix -> . LBRACKET row_list RBRACKET

    MINUS           shift and go to state 26
    NOT             shift and go to state 30
    ID              shift and go to state 45
    NUMBER          shift and go to state 33
    STRING          shift and go to state 34
    LPAREN          shift and go to state 18
    LBRACKET        shift and go to state 36

    expression                     shift and go to state 47
    colon_expr                     shift and go to state 19
    short_or                       shift and go to state 20
    short_and                      shift and go to state 21
    logical_or                     shift and go to state 22
    logical_and                    shift and go to state 23
    relation                       shift and go to state 24
    additive                       shift and go to state 25
    multiplicative                 shift and go to state 27
    power                          shift and go to state 28
    unary                          shift and go to state 29
    postfix                        shift and go to state 31
    primary                        shift and go to state 32
    matrix                         shift and go to state 35

state 17

    (29) function_declaration -> FUNCTION . return_vars ASSIGN ID LPAREN arg_list RPAREN block END
    (30) function_declaration -> FUNCTION . ID LPAREN arg_list RPAREN block END
    (31) return_vars -> . ID
    (32) return_vars -> . LBRACKET id_list RBRACKET

    ID              shift and go to state 49
    LBRACKET        shift and go to state 50

    return_vars                    shift and go to state 48

state 18
